rtest/tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldFail/syntax05/Test.java
// .result=COMPILE_FAIL
public class Test {
	public interface A {
		default boolean equals(Object o);
	}
}